--- a/challenge one.html
+++ b/challenge one.html
@@ -35,6 +35,7 @@
         </ul>
     </nav>
     <main id="main-doc">
+            <img src="sanky.jpg" alt="i like this image">
         <section id="BRIEF_INTRODUCTION" class="main-section">
             <header>BRIEF_INTRODUCTION</header>
             <article>
@@ -75,6 +76,8 @@
         </selection>
         <selection id="FUN_FACTS" class="main-section">
             <header>FUN_ZONE</header>
+            <img src="volley 2.jpg" alt="gud">
+            <img src="volley.jpg" alt="better">
             <article>
                 <p>This is one sphere where i do believe that no one will ever exhaust him/herself. This is because its quite hard for one to know all that he/she likes. I for one, am always getting new cool things i like. to mention but a few, i love music most esp RnB, Pop e.t.c</p>
                 <p>I also do tabletennis, volleyball, basketball and swimming.</p>
